# home-weather-hub

./: .gitignore  CLAUDE.md  FLASH.md  README.md  docker-compose.yml  flash_pi.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
config/: stations.example.toml
config/mosquitto/: mosquitto.conf
config/zigbee2mqtt/: configuration.example.yaml
infra/: README.md
infra/grafana/: .env.example  docker-compose.yml
infra/influxdb/: .env.example  backup-r2-sync.sh  backup.sh  docker-compose.yml
infra/launchd/: dev.tommydoerr.influxdb-backup-r2-sync.plist  dev.tommydoerr.influxdb-backup.plist  dev.tommydoerr.tempest-bridge.plist
infra/tempest-bridge/: .env.example  bridge.sh  tempest_to_influx.py
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  grafana.tf  grafana_dashboard.tf  grafana_datasources.tf  influx_resources.tf  influxdb.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: install-native.sh  install-zigbee-native.sh
scripts/launchd/: com.home-weather-hub.tempest-listener.plist  com.home-weather-hub.zigbee-subscriber.plist  com.zigbee2mqtt.plist
src/home_weather_hub/: config.py  dashboard_api.py  event_bus.py  store.py  tempest_decode.py  tempest_listener.py  tempest_monitor.py  tempest_stats.py  zigbee_subscriber.py
tests/: conftest.py
tests/e2e/: test_listener_subprocess.py
tests/integration/: test_dashboard_api.py  test_listener_with_db.py  test_udp_capture.py
tests/unit/: test_config.py  (+9 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+38 files in other folders)
